fixed alignment on /workouts page

--- a/client/src/styles/Workouts.css
+++ b/client/src/styles/Workouts.css
@@ -11,7 +11,6 @@ h1 {
 
 .workout-page {
   display: flex;
-  justify-content: space-between;
 }
 
 .filter-container {
